--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 <div class="card-body">
                   <h5 class="card-title">iphone 11 Pro</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores tempora error architecto?</p>
+                  <h4 class="price">$700</h4>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
@@ -121,6 +122,7 @@
                 <div class="card-body">
                   <h5 class="card-title">jPhone</h5>
                   <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero in dolore dicta repellat.</p>
+                  <h4 class="price">$700</h4>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
@@ -133,6 +135,7 @@
                 <div class="card-body">
                   <h5 class="card-title">ki phone</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ducimus neque at aspernatur praesentium sequi reprehenderit. Reiciendis aut autem voluptas!</p>
+                  <h4 class="price">$700</h4>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
@@ -153,6 +156,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Laptop 1</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde libero quos cupiditate ab laboriosam. Harum!</p>
+                  <h4 class="price">$700</h4>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
@@ -165,6 +169,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Laptop 2</h5>
                   <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde voluptatibus harum quaerat eaque. Rem, eligendi praesentium.</p>
+                  <h4 class="price">$700</h4>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
@@ -177,6 +182,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Laptop 3</h5>
                   <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, at eius?</p>
+                  <h4 class="price">$700</h4>
                 </div>
                 <div class="card-footer">
                   <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
