--- a/index.html
+++ b/index.html
@@ -106,39 +106,39 @@
             <div class="col">
               <div class="card h-100">
                 <img src="phone/phone-1.png" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body d-flex flex-column align-items-center">
                   <h5 class="card-title">iphone 11 Pro</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores tempora error architecto?</p>
-                  <h4 class="price">$700</h4>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
+                <div class="card-footer d-flex flex-column align-items-center">
+                    <h4 class="price">$700</h4>
+                    <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card h-100">
                 <img src="phone/phone-2.png" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body d-flex flex-column align-items-center">
                   <h5 class="card-title">jPhone</h5>
                   <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero in dolore dicta repellat.</p>
-                  <h4 class="price">$700</h4>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
+                <div class="card-footer d-flex flex-column align-items-center">
+                    <h4 class="price">$700</h4>
+                    <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card h-100">
                 <img src="phone/phone-3.png" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body d-flex flex-column align-items-center">
                   <h5 class="card-title">ki phone</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ducimus neque at aspernatur praesentium sequi reprehenderit. Reiciendis aut autem voluptas!</p>
-                  <h4 class="price">$700</h4>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ducimus neque at aspernatur praesentium sequi</p>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
+                <div class="card-footer d-flex flex-column align-items-center">
+                    <h4 class="price">$700</h4>
+                    <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
                 </div>
               </div>
             </div>
@@ -153,39 +153,39 @@
             <div class="col">
               <div class="card h-100">
                 <img src="laptop/product-1.png" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body d-flex flex-column align-items-center">
                   <h5 class="card-title">Laptop 1</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde libero quos cupiditate ab laboriosam. Harum!</p>
-                  <h4 class="price">$700</h4>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
+                <div class="card-footer d-flex flex-column align-items-center">
+                    <h4 class="price">$700</h4>
+                    <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card h-100">
                 <img src="laptop/product-2.png" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body d-flex flex-column align-items-center">
                   <h5 class="card-title">Laptop 2</h5>
                   <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde voluptatibus harum quaerat eaque. Rem, eligendi praesentium.</p>
-                  <h4 class="price">$700</h4>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
+                <div class="card-footer d-flex flex-column align-items-center">
+                    <h4 class="price">$700</h4>
+                    <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card h-100">
                 <img src="laptop/product-3.png" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="card-body d-flex flex-column align-items-center">
                   <h5 class="card-title">Laptop 3</h5>
                   <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam, at eius?</p>
-                  <h4 class="price">$700</h4>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
+                <div class="card-footer d-flex flex-column align-items-center">
+                    <h4 class="price">$700</h4>
+                    <small class="text-muted"><button type="button" class="btn btn-dark">BUY NOW →</button></small>
                 </div>
               </div>
             </div>
