--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="logo.png" alt="" srcset=""></a>
+          <a class="navbar-brand" href="#"><img src="logo.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -220,26 +220,26 @@
           <div class="d-flex justify-content-center align-content-center flex-wrap col-xxl-3 col-xl-3 col-lg-6 col-md-6 col-sm-6">
             <div class="card text-bg-light mb-3" style="max-width: 18rem;">
               <div class="card-body">
-                <img src="/Categories/bag.png" alt="">
+                <img src="Categories/bag.png" alt="">
               </div>
             </div>
           </div>
           <div class="d-flex justify-content-center align-content-around flex-wrap col-xxl-3 col-xl-3 col-lg-6 col-md-6 col-sm-6">
             <div class="card text-bg-light mb-3" style="max-width: 18rem;">
               <div class="card-body">
-                <img src="/Categories/perfume.png" alt="">
+                <img src="Categories/perfume.png" alt="">
               </div>
             </div>
             
             <div class="card text-bg-light mb-3" style="max-width: 18rem;">
               <div class="card-body">
-                <img src="/Categories/shoe.png" alt="">
+                <img src="Categories/shoe.png" alt="">
               </div>
             </div>
           </div>
   
           <div class="d-flex justify-content-center align-content-center flex-wrap col-xxl-6 col-xl-6 col-lg-12 col-md-12 col-sm-12">
-            <img src="/Categories/pale-order.png" alt="">
+            <img src="Categories/pale-order.png" alt="">
           </div>
           
         </div>
@@ -248,7 +248,6 @@
       <footer class="d-flex justify-content-center gray-text">
         <h6>This site have no copyright</h6>
       </footer>
-
 
 
 
