--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </div>
           </div>
   
-          <div class="d-flex justify-content-center align-content-center flex-wrap col-xxl-6 col-xl-6 col-lg-12 col-md-12 col-sm-12">
+          <div class="resize d-flex justify-content-center align-content-center flex-wrap col-xxl-6 col-xl-6 col-lg-12 col-md-12 col-sm-12">
             <img src="Categories/pale-order.png" alt="">
           </div>
           
