--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <div class="card h-100">
                 <img src="phone/phone-2.png" class="card-img-top" alt="...">
                 <div class="card-body d-flex flex-column align-items-center">
-                  <h5 class="card-title">jPhone</h5>
+                  <h5 class="card-title">iPhone</h5>
                   <p class="card-text gray-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero in dolore dicta repellat.</p>
                 </div>
                 <div class="card-footer d-flex flex-column align-items-center">
@@ -152,7 +152,7 @@
               <div class="card h-100">
                 <img src="phone/phone-3.png" class="card-img-top" alt="...">
                 <div class="card-body d-flex flex-column align-items-center">
-                  <h5 class="card-title gray-text">ki phone</h5>
+                  <h5 class="card-title gray-text">Samsung</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ducimus neque at aspernatur praesentium sequi</p>
                 </div>
                 <div class="card-footer d-flex flex-column align-items-center">
